deployment/test-env/kong/kong/deployment.yaml
#https://github.com/bitnami/bitnami-docker-kong#configuration
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: kong
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      creationTimestamp: null
      labels:
        app: kong
        deploymentconfig: kong
    spec:
      containers:
      - image: quay.io/bitnami/kong:2
        imagePullPolicy: Always
        name: kong
        ports:
        - containerPort: 8000
          protocol: TCP
        - containerPort: 8001
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
