deployment/test-env/kong/kong/service.yaml
kind: "Service"
apiVersion: "v1"
metadata:
  name: kong
  labels:
    name: kong
spec:
  ports:
    - name: 8000-tcp-kong
      protocol: "TCP"
      port: 8000
      targetPort: 8000
    - name: 8001-tcp-kong
      protocol: "TCP"
      port: 8001
      targetPort: 8001
    - name: 8443-tcp-kong
      protocol: "TCP"
      port: 8443
      targetPort: 8443
  selector:
    app: kong
  type: "ClusterIP"
  sessionAffinity: "None"
