deployment/test-env/kong/kong/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: kong
    app.kubernetes.io/component: kong
    app.kubernetes.io/instance: kong
    app.openshift.io/runtime-version: latest
  name: kong
spec:
  host: kong-cloud-operations.apps.tocpt2.tcs.turkcell.tgc
  port:
    targetPort: 8000-tcp-kong
  to:
    kind: Service
    name: kong
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
